--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "track-view",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "View of track.",
   "main": "lib/index.js",
   "repository": "alfa-jpn/track-view.git",
@@ -10,12 +10,14 @@
   },
   "author": "alfa-jpn",
   "license": "ISC",
-  "dependencies": {
-    "track-i18n": "0.0.2"
-  },
   "devDependencies": {
     "eslint": "^4.17.0",
     "eslint-config-google": "^0.9.1",
-    "track-spec": "0.0.2"
+    "mithril": "^1.1.6",
+    "track-i18n": "0.0.2",
+    "track-spec": "0.0.3"
+  },
+  "peerDependencies": {
+    "track-i18n": "0.0.x"
   }
 }
